# bsq

./: .gitignore  MIGRATION.md  README.md  pyproject.toml  requirements.txt
configs/: aws.env.example  matches.yaml
docs/: DATA_POLICY.md  DELIVERABLES.md  FORMULATION.md  METHOD.md  REFERENCES.md  REPRODUCIBILITY_AUDIT.md  REPRODUCTION.md
metrics-calculation/: README.md
metrics-calculation/fixtures/: README.md
metrics-calculation/notebooks/: 00_methodology_and_formulation.ipynb  01_pipeline_computation.ipynb  02_five_match_league_dashboard.ipynb  03_player_profile_harry_kane.ipynb  04_player_profile_michael_olise.ipynb  06_player_profile_serhou_guirassy.ipynb  07_bayern_3d_shot_map_bayern_hamburg.ipynb  08_body_shape_at_release.ipynb  08_harry_kane_3d_shot_map.ipynb  Bundesliga_AWS_3D_Football_Visualizations.ipynb  README.md
metrics-calculation/reference_outputs/: README.md  contact_candidates.csv  features.csv  players.csv  router_audit.csv  scores_v1.csv  shots.csv  (+1 more)
outputs/: shot_map_bayern_hamburg.html  shot_map_harry_kane.html
scripts/: CODEX_LOGO_DIAGNOSTIC_PROMPT.md  build_notebooks.py  diagnose_leaderboard_logos.py  execute_bsq_notebooks.py  export_reference_outputs.sh  merge_match_outputs.py  rebuild_pitch_control.sh  reproduce.sh  rerun_notebook_05.py  run_player_profile_notebooks.py  sync_from_workspace.sh  verify_install.sh
shooting-videos/: README.md
submission/: README.md  github_link.txt.example
tests/: test_bsq_leaderboards_v2.py  test_bsq_shot_trajectory_3d.py  test_player_speedometer_highlights.py
visualizer/: README.md
(+98 files in other folders)
