[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bundesliga-shooting-bsq"
version = "0.1.0"
description = "Reproducible shooting BSQ metrics on Bundesliga 3D skeleton data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
metrics = [
  "pyarrow>=14,<22",
  "s3fs>=2024.6.0,<2025.4",
  "fsspec>=2024.6.0,<2025.4",
  "boto3>=1.34",
  "pandas>=2.1",
]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
  "pillow>=10",
  "plotly>=5.22",
  "kaleido>=0.2",
  "nbformat>=5.10",
]
all = [
  "bundesliga-shooting-bsq[metrics,notebooks,dev]",
]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
shooting-build = "shooting1.build:main"

[tool.setuptools.packages.find]
where = ["metrics-calculation", "src"]

[tool.setuptools.package-dir]
"shooting1" = "metrics-calculation/shooting1"
"aws_football" = "src/aws_football"

[tool.setuptools.package-data]
aws_football = ["fonts/*.ttf", "fonts/OFL.txt", "fonts/README.txt"]
